--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-color: #f5f5f5;
+            background-image: url('./background.jpg');
         }
         
         .calculator {
